substrate/frame/support/test/tests/construct_runtime_ui/conflicting_module_name.stderr
error: Two pallets with the same name!
  --> tests/construct_runtime_ui/conflicting_module_name.rs:24:3
   |
24 |         Balance: balances::{Pallet},
   |         ^^^^^^^

error: Two pallets with the same name!
  --> tests/construct_runtime_ui/conflicting_module_name.rs:25:3
   |
25 |         Balance: balances::{Pallet},
   |         ^^^^^^^
